lexer/parser.output
   0  $accept : %entry% $end

   1  start :
   2        | start fdecl

   3  variables : ID
   4            | STRING_LITERAL
   5            | ELEMENT_LITERAL
   6            | MOLECULE_LITERAL

   7  element : ELEMENT_LITERAL

   8  molecule : MOLECULE_LITERAL

   9  simple_declaration : datatypes ID SEMICOLON

  10  simple_declaration_list :
  11                          | simple_declaration_list simple_declaration

  12  statement : expr SEMICOLON
  13            | RETURN expr SEMICOLON
  14            | PRINT expr SEMICOLON
  15            | LBRACE statement_list RBRACE
  16            | IF LPAREN expr RPAREN statement ELSE statement
  17            | FOR LPAREN expr SEMICOLON expr SEMICOLON expr RPAREN statement
  18            | WHILE LPAREN expr RPAREN statement

  19  statement_list :
  20                 | statement_list statement

  21  datatypes : INT
  22            | BOOLEAN
  23            | STRING
  24            | DOUBLE

  25  expr : INTEGER_LITERAL
  26       | DOUBLE_LITERAL
  27       | variables
  28       | EQUATION variables LBRACE element_list ARROW element_list RBRACE
  29       | BALANCE LBRACKET molecule_list ARROW molecule_list RBRACKET
  30       | expr ACCESS ATTRIBUTE
  31       | expr PLUS expr
  32       | expr MINUS expr
  33       | expr MUL expr
  34       | expr DIV expr
  35       | expr MOD expr
  36       | expr EQ expr
  37       | expr NEQ expr
  38       | expr LT expr
  39       | expr GT expr
  40       | expr LTQ expr
  41       | expr GTQ expr
  42       | expr AND expr
  43       | expr OR expr
  44       | expr CONCATENATE expr
  45       | variables ASSIGN expr
  46       | LPAREN expr RPAREN
  47       | CALL variables LPAREN actuals_opt RPAREN
  48       | CHARGE LPAREN variables RPAREN
  49       | MASS LPAREN variables RPAREN
  50       | ELECTRONS LPAREN variables RPAREN

  51  actuals_opt :
  52              | actuals_list

  53  actuals_list : expr
  54               | actuals_list COMMA expr

  55  e_declaration : ELEMENT ELEMENT_LITERAL LPAREN INTEGER_LITERAL COMMA DOUBLE_LITERAL COMMA INTEGER_LITERAL RPAREN SEMICOLON

  56  e_declaration_list :
  57                     | e_declaration_list e_declaration

  58  element_list : element
  59               | element_list COMMA element

  60  molecule_list : molecule
  61                | molecule_list COMMA molecule

  62  m_declaration : MOLECULE MOLECULE_LITERAL LPAREN element_list RPAREN SEMICOLON

  63  m_declaration_list :
  64                     | m_declaration_list m_declaration

  65  argument_opt :
  66               | argument_list

  67  argument_list : parameter_declaration
  68                | argument_list COMMA parameter_declaration

  69  parameter_declaration : datatypes variables

  70  fdecl : FUNCTION variables LPAREN argument_opt RPAREN LBRACE simple_declaration_list e_declaration_list m_declaration_list statement_list RBRACE

  71  %entry% : '\001' start

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . start  (71)
	start : .  (1)

	.  reduce 1

	start  goto 3


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	start : start . fdecl  (2)
	%entry% : '\001' start .  (71)

	FUNCTION  shift 4
	$end  reduce 71

	fdecl  goto 5


state 4
	fdecl : FUNCTION . variables LPAREN argument_opt RPAREN LBRACE simple_declaration_list e_declaration_list m_declaration_list statement_list RBRACE  (70)

	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	.  error

	variables  goto 10


state 5
	start : start fdecl .  (2)

	.  reduce 2


state 6
	variables : ELEMENT_LITERAL .  (5)

	.  reduce 5


state 7
	variables : MOLECULE_LITERAL .  (6)

	.  reduce 6


state 8
	variables : STRING_LITERAL .  (4)

	.  reduce 4


state 9
	variables : ID .  (3)

	.  reduce 3


state 10
	fdecl : FUNCTION variables . LPAREN argument_opt RPAREN LBRACE simple_declaration_list e_declaration_list m_declaration_list statement_list RBRACE  (70)

	LPAREN  shift 11
	.  error


state 11
	fdecl : FUNCTION variables LPAREN . argument_opt RPAREN LBRACE simple_declaration_list e_declaration_list m_declaration_list statement_list RBRACE  (70)
	argument_opt : .  (65)

	INT  shift 12
	DOUBLE  shift 13
	STRING  shift 14
	BOOLEAN  shift 15
	RPAREN  reduce 65

	datatypes  goto 16
	argument_opt  goto 17
	argument_list  goto 18
	parameter_declaration  goto 19


state 12
	datatypes : INT .  (21)

	.  reduce 21


state 13
	datatypes : DOUBLE .  (24)

	.  reduce 24


state 14
	datatypes : STRING .  (23)

	.  reduce 23


state 15
	datatypes : BOOLEAN .  (22)

	.  reduce 22


state 16
	parameter_declaration : datatypes . variables  (69)

	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	.  error

	variables  goto 20


state 17
	fdecl : FUNCTION variables LPAREN argument_opt . RPAREN LBRACE simple_declaration_list e_declaration_list m_declaration_list statement_list RBRACE  (70)

	RPAREN  shift 21
	.  error


state 18
	argument_opt : argument_list .  (66)
	argument_list : argument_list . COMMA parameter_declaration  (68)

	COMMA  shift 22
	RPAREN  reduce 66


state 19
	argument_list : parameter_declaration .  (67)

	.  reduce 67


state 20
	parameter_declaration : datatypes variables .  (69)

	.  reduce 69


state 21
	fdecl : FUNCTION variables LPAREN argument_opt RPAREN . LBRACE simple_declaration_list e_declaration_list m_declaration_list statement_list RBRACE  (70)

	LBRACE  shift 23
	.  error


state 22
	argument_list : argument_list COMMA . parameter_declaration  (68)

	INT  shift 12
	DOUBLE  shift 13
	STRING  shift 14
	BOOLEAN  shift 15
	.  error

	datatypes  goto 16
	parameter_declaration  goto 24


state 23
	fdecl : FUNCTION variables LPAREN argument_opt RPAREN LBRACE . simple_declaration_list e_declaration_list m_declaration_list statement_list RBRACE  (70)
	simple_declaration_list : .  (10)

	.  reduce 10

	simple_declaration_list  goto 25


state 24
	argument_list : argument_list COMMA parameter_declaration .  (68)

	.  reduce 68


state 25
	simple_declaration_list : simple_declaration_list . simple_declaration  (11)
	fdecl : FUNCTION variables LPAREN argument_opt RPAREN LBRACE simple_declaration_list . e_declaration_list m_declaration_list statement_list RBRACE  (70)
	e_declaration_list : .  (56)

	INT  shift 12
	DOUBLE  shift 13
	STRING  shift 14
	BOOLEAN  shift 15
	LPAREN  reduce 56
	LBRACE  reduce 56
	RBRACE  reduce 56
	IF  reduce 56
	FOR  reduce 56
	WHILE  reduce 56
	RETURN  reduce 56
	PRINT  reduce 56
	ELEMENT  reduce 56
	MOLECULE  reduce 56
	EQUATION  reduce 56
	BALANCE  reduce 56
	CALL  reduce 56
	MASS  reduce 56
	CHARGE  reduce 56
	ELECTRONS  reduce 56
	ELEMENT_LITERAL  reduce 56
	MOLECULE_LITERAL  reduce 56
	STRING_LITERAL  reduce 56
	ID  reduce 56
	INTEGER_LITERAL  reduce 56
	DOUBLE_LITERAL  reduce 56

	simple_declaration  goto 26
	datatypes  goto 27
	e_declaration_list  goto 28


state 26
	simple_declaration_list : simple_declaration_list simple_declaration .  (11)

	.  reduce 11


state 27
	simple_declaration : datatypes . ID SEMICOLON  (9)

	ID  shift 29
	.  error


state 28
	e_declaration_list : e_declaration_list . e_declaration  (57)
	fdecl : FUNCTION variables LPAREN argument_opt RPAREN LBRACE simple_declaration_list e_declaration_list . m_declaration_list statement_list RBRACE  (70)
	m_declaration_list : .  (63)

	ELEMENT  shift 30
	LPAREN  reduce 63
	LBRACE  reduce 63
	RBRACE  reduce 63
	IF  reduce 63
	FOR  reduce 63
	WHILE  reduce 63
	RETURN  reduce 63
	PRINT  reduce 63
	MOLECULE  reduce 63
	EQUATION  reduce 63
	BALANCE  reduce 63
	CALL  reduce 63
	MASS  reduce 63
	CHARGE  reduce 63
	ELECTRONS  reduce 63
	ELEMENT_LITERAL  reduce 63
	MOLECULE_LITERAL  reduce 63
	STRING_LITERAL  reduce 63
	ID  reduce 63
	INTEGER_LITERAL  reduce 63
	DOUBLE_LITERAL  reduce 63

	e_declaration  goto 31
	m_declaration_list  goto 32


state 29
	simple_declaration : datatypes ID . SEMICOLON  (9)

	SEMICOLON  shift 33
	.  error


state 30
	e_declaration : ELEMENT . ELEMENT_LITERAL LPAREN INTEGER_LITERAL COMMA DOUBLE_LITERAL COMMA INTEGER_LITERAL RPAREN SEMICOLON  (55)

	ELEMENT_LITERAL  shift 34
	.  error


state 31
	e_declaration_list : e_declaration_list e_declaration .  (57)

	.  reduce 57


state 32
	m_declaration_list : m_declaration_list . m_declaration  (64)
	fdecl : FUNCTION variables LPAREN argument_opt RPAREN LBRACE simple_declaration_list e_declaration_list m_declaration_list . statement_list RBRACE  (70)
	statement_list : .  (19)

	MOLECULE  shift 35
	LPAREN  reduce 19
	LBRACE  reduce 19
	RBRACE  reduce 19
	IF  reduce 19
	FOR  reduce 19
	WHILE  reduce 19
	RETURN  reduce 19
	PRINT  reduce 19
	EQUATION  reduce 19
	BALANCE  reduce 19
	CALL  reduce 19
	MASS  reduce 19
	CHARGE  reduce 19
	ELECTRONS  reduce 19
	ELEMENT_LITERAL  reduce 19
	MOLECULE_LITERAL  reduce 19
	STRING_LITERAL  reduce 19
	ID  reduce 19
	INTEGER_LITERAL  reduce 19
	DOUBLE_LITERAL  reduce 19

	statement_list  goto 36
	m_declaration  goto 37


state 33
	simple_declaration : datatypes ID SEMICOLON .  (9)

	.  reduce 9


state 34
	e_declaration : ELEMENT ELEMENT_LITERAL . LPAREN INTEGER_LITERAL COMMA DOUBLE_LITERAL COMMA INTEGER_LITERAL RPAREN SEMICOLON  (55)

	LPAREN  shift 38
	.  error


state 35
	m_declaration : MOLECULE . MOLECULE_LITERAL LPAREN element_list RPAREN SEMICOLON  (62)

	MOLECULE_LITERAL  shift 39
	.  error


state 36
	statement_list : statement_list . statement  (20)
	fdecl : FUNCTION variables LPAREN argument_opt RPAREN LBRACE simple_declaration_list e_declaration_list m_declaration_list statement_list . RBRACE  (70)

	LPAREN  shift 40
	LBRACE  shift 41
	RBRACE  shift 42
	IF  shift 43
	FOR  shift 44
	WHILE  shift 45
	RETURN  shift 46
	PRINT  shift 47
	EQUATION  shift 48
	BALANCE  shift 49
	CALL  shift 50
	MASS  shift 51
	CHARGE  shift 52
	ELECTRONS  shift 53
	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	INTEGER_LITERAL  shift 54
	DOUBLE_LITERAL  shift 55
	.  error

	variables  goto 56
	statement  goto 57
	expr  goto 58


state 37
	m_declaration_list : m_declaration_list m_declaration .  (64)

	.  reduce 64


state 38
	e_declaration : ELEMENT ELEMENT_LITERAL LPAREN . INTEGER_LITERAL COMMA DOUBLE_LITERAL COMMA INTEGER_LITERAL RPAREN SEMICOLON  (55)

	INTEGER_LITERAL  shift 59
	.  error


state 39
	m_declaration : MOLECULE MOLECULE_LITERAL . LPAREN element_list RPAREN SEMICOLON  (62)

	LPAREN  shift 60
	.  error


state 40
	expr : LPAREN . expr RPAREN  (46)

	LPAREN  shift 40
	EQUATION  shift 48
	BALANCE  shift 49
	CALL  shift 50
	MASS  shift 51
	CHARGE  shift 52
	ELECTRONS  shift 53
	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	INTEGER_LITERAL  shift 54
	DOUBLE_LITERAL  shift 55
	.  error

	variables  goto 56
	expr  goto 61


state 41
	statement : LBRACE . statement_list RBRACE  (15)
	statement_list : .  (19)

	.  reduce 19

	statement_list  goto 62


state 42
	fdecl : FUNCTION variables LPAREN argument_opt RPAREN LBRACE simple_declaration_list e_declaration_list m_declaration_list statement_list RBRACE .  (70)

	.  reduce 70


state 43
	statement : IF . LPAREN expr RPAREN statement ELSE statement  (16)

	LPAREN  shift 63
	.  error


state 44
	statement : FOR . LPAREN expr SEMICOLON expr SEMICOLON expr RPAREN statement  (17)

	LPAREN  shift 64
	.  error


state 45
	statement : WHILE . LPAREN expr RPAREN statement  (18)

	LPAREN  shift 65
	.  error


state 46
	statement : RETURN . expr SEMICOLON  (13)

	LPAREN  shift 40
	EQUATION  shift 48
	BALANCE  shift 49
	CALL  shift 50
	MASS  shift 51
	CHARGE  shift 52
	ELECTRONS  shift 53
	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	INTEGER_LITERAL  shift 54
	DOUBLE_LITERAL  shift 55
	.  error

	variables  goto 56
	expr  goto 66


state 47
	statement : PRINT . expr SEMICOLON  (14)

	LPAREN  shift 40
	EQUATION  shift 48
	BALANCE  shift 49
	CALL  shift 50
	MASS  shift 51
	CHARGE  shift 52
	ELECTRONS  shift 53
	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	INTEGER_LITERAL  shift 54
	DOUBLE_LITERAL  shift 55
	.  error

	variables  goto 56
	expr  goto 67


state 48
	expr : EQUATION . variables LBRACE element_list ARROW element_list RBRACE  (28)

	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	.  error

	variables  goto 68


state 49
	expr : BALANCE . LBRACKET molecule_list ARROW molecule_list RBRACKET  (29)

	LBRACKET  shift 69
	.  error


state 50
	expr : CALL . variables LPAREN actuals_opt RPAREN  (47)

	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	.  error

	variables  goto 70


state 51
	expr : MASS . LPAREN variables RPAREN  (49)

	LPAREN  shift 71
	.  error


state 52
	expr : CHARGE . LPAREN variables RPAREN  (48)

	LPAREN  shift 72
	.  error


state 53
	expr : ELECTRONS . LPAREN variables RPAREN  (50)

	LPAREN  shift 73
	.  error


state 54
	expr : INTEGER_LITERAL .  (25)

	.  reduce 25


state 55
	expr : DOUBLE_LITERAL .  (26)

	.  reduce 26


state 56
	expr : variables .  (27)
	expr : variables . ASSIGN expr  (45)

	ASSIGN  shift 74
	SEMICOLON  reduce 27
	RPAREN  reduce 27
	COMMA  reduce 27
	PLUS  reduce 27
	MINUS  reduce 27
	MUL  reduce 27
	DIV  reduce 27
	MOD  reduce 27
	CONCATENATE  reduce 27
	EQ  reduce 27
	NEQ  reduce 27
	LT  reduce 27
	LTQ  reduce 27
	GT  reduce 27
	GTQ  reduce 27
	ACCESS  reduce 27
	AND  reduce 27
	OR  reduce 27


state 57
	statement_list : statement_list statement .  (20)

	.  reduce 20


state 58
	statement : expr . SEMICOLON  (12)
	expr : expr . ACCESS ATTRIBUTE  (30)
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LTQ expr  (40)
	expr : expr . GTQ expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	expr : expr . CONCATENATE expr  (44)

	SEMICOLON  shift 75
	PLUS  shift 76
	MINUS  shift 77
	MUL  shift 78
	DIV  shift 79
	MOD  shift 80
	CONCATENATE  shift 81
	EQ  shift 82
	NEQ  shift 83
	LT  shift 84
	LTQ  shift 85
	GT  shift 86
	GTQ  shift 87
	ACCESS  shift 88
	AND  shift 89
	OR  shift 90
	.  error


state 59
	e_declaration : ELEMENT ELEMENT_LITERAL LPAREN INTEGER_LITERAL . COMMA DOUBLE_LITERAL COMMA INTEGER_LITERAL RPAREN SEMICOLON  (55)

	COMMA  shift 91
	.  error


state 60
	m_declaration : MOLECULE MOLECULE_LITERAL LPAREN . element_list RPAREN SEMICOLON  (62)

	ELEMENT_LITERAL  shift 92
	.  error

	element  goto 93
	element_list  goto 94


state 61
	expr : expr . ACCESS ATTRIBUTE  (30)
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LTQ expr  (40)
	expr : expr . GTQ expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	expr : expr . CONCATENATE expr  (44)
	expr : LPAREN expr . RPAREN  (46)

	RPAREN  shift 95
	PLUS  shift 76
	MINUS  shift 77
	MUL  shift 78
	DIV  shift 79
	MOD  shift 80
	CONCATENATE  shift 81
	EQ  shift 82
	NEQ  shift 83
	LT  shift 84
	LTQ  shift 85
	GT  shift 86
	GTQ  shift 87
	ACCESS  shift 88
	AND  shift 89
	OR  shift 90
	.  error


state 62
	statement : LBRACE statement_list . RBRACE  (15)
	statement_list : statement_list . statement  (20)

	LPAREN  shift 40
	LBRACE  shift 41
	RBRACE  shift 96
	IF  shift 43
	FOR  shift 44
	WHILE  shift 45
	RETURN  shift 46
	PRINT  shift 47
	EQUATION  shift 48
	BALANCE  shift 49
	CALL  shift 50
	MASS  shift 51
	CHARGE  shift 52
	ELECTRONS  shift 53
	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	INTEGER_LITERAL  shift 54
	DOUBLE_LITERAL  shift 55
	.  error

	variables  goto 56
	statement  goto 57
	expr  goto 58


state 63
	statement : IF LPAREN . expr RPAREN statement ELSE statement  (16)

	LPAREN  shift 40
	EQUATION  shift 48
	BALANCE  shift 49
	CALL  shift 50
	MASS  shift 51
	CHARGE  shift 52
	ELECTRONS  shift 53
	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	INTEGER_LITERAL  shift 54
	DOUBLE_LITERAL  shift 55
	.  error

	variables  goto 56
	expr  goto 97


state 64
	statement : FOR LPAREN . expr SEMICOLON expr SEMICOLON expr RPAREN statement  (17)

	LPAREN  shift 40
	EQUATION  shift 48
	BALANCE  shift 49
	CALL  shift 50
	MASS  shift 51
	CHARGE  shift 52
	ELECTRONS  shift 53
	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	INTEGER_LITERAL  shift 54
	DOUBLE_LITERAL  shift 55
	.  error

	variables  goto 56
	expr  goto 98


state 65
	statement : WHILE LPAREN . expr RPAREN statement  (18)

	LPAREN  shift 40
	EQUATION  shift 48
	BALANCE  shift 49
	CALL  shift 50
	MASS  shift 51
	CHARGE  shift 52
	ELECTRONS  shift 53
	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	INTEGER_LITERAL  shift 54
	DOUBLE_LITERAL  shift 55
	.  error

	variables  goto 56
	expr  goto 99


state 66
	statement : RETURN expr . SEMICOLON  (13)
	expr : expr . ACCESS ATTRIBUTE  (30)
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LTQ expr  (40)
	expr : expr . GTQ expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	expr : expr . CONCATENATE expr  (44)

	SEMICOLON  shift 100
	PLUS  shift 76
	MINUS  shift 77
	MUL  shift 78
	DIV  shift 79
	MOD  shift 80
	CONCATENATE  shift 81
	EQ  shift 82
	NEQ  shift 83
	LT  shift 84
	LTQ  shift 85
	GT  shift 86
	GTQ  shift 87
	ACCESS  shift 88
	AND  shift 89
	OR  shift 90
	.  error


state 67
	statement : PRINT expr . SEMICOLON  (14)
	expr : expr . ACCESS ATTRIBUTE  (30)
	expr : expr . PLUS expr  (31)
	expr : expr . MINUS expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NEQ expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LTQ expr  (40)
	expr : expr . GTQ expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	expr : expr . CONCATENATE expr  (44)

	SEMICOLON  shift 101
	PLUS  shift 76
	MINUS  shift 77
	MUL  shift 78
	DIV  shift 79
	MOD  shift 80
	CONCATENATE  shift 81
	EQ  shift 82
	NEQ  shift 83
	LT  shift 84
	LTQ  shift 85
	GT  shift 86
	GTQ  shift 87
	ACCESS  shift 88
	AND  shift 89
	OR  shift 90
	.  error


state 68
	expr : EQUATION variables . LBRACE element_list ARROW element_list RBRACE  (28)

	LBRACE  shift 102
	.  error


state 69
	expr : BALANCE LBRACKET . molecule_list ARROW molecule_list RBRACKET  (29)

	MOLECULE_LITERAL  shift 103
	.  error

	molecule  goto 104
	molecule_list  goto 105


state 70
	expr : CALL variables . LPAREN actuals_opt RPAREN  (47)

	LPAREN  shift 106
	.  error


state 71
	expr : MASS LPAREN . variables RPAREN  (49)

	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	.  error

	variables  goto 107


state 72
	expr : CHARGE LPAREN . variables RPAREN  (48)

	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	.  error

	variables  goto 108


state 73
	expr : ELECTRONS LPAREN . variables RPAREN  (50)

	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	.  error

	variables  goto 109


state 74
	expr : variables ASSIGN . expr  (45)

	LPAREN  shift 40
	EQUATION  shift 48
	BALANCE  shift 49
	CALL  shift 50
	MASS  shift 51
	CHARGE  shift 52
	ELECTRONS  shift 53
	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	INTEGER_LITERAL  shift 54
	DOUBLE_LITERAL  shift 55
	.  error

	variables  goto 56
	expr  goto 110


state 75
	statement : expr SEMICOLON .  (12)

	.  reduce 12


state 76
	expr : expr PLUS . expr  (31)

	LPAREN  shift 40
	EQUATION  shift 48
	BALANCE  shift 49
	CALL  shift 50
	MASS  shift 51
	CHARGE  shift 52
	ELECTRONS  shift 53
	ELEMENT_LITERAL  shift 6
	MOLECULE_LITERAL  shift 7
	STRING_LITERAL  shift 8
	ID  shift 9
	INTEGER_LITERAL  shift 54
	DOUBLE_LITERAL  shift 55
	.  error

	variables  goto 56
	expr  goto 111


state 77
	expr : expr MINUS . expr  (32)
